@@ -1,3 +1,7 @@
+2018-11-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp: Minor update setting Boost define
+
 2018-11-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Rolled minor version
